--- a/package.json
+++ b/package.json
@@ -3,34 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev ./src",
-    "build": "next build ./src",
-    "start": "next start ./src"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
-    "@material-ui/core": "^4.5.2",
-    "@material-ui/icons": "^4.5.1",
-    "@types/mobx-devtools-mst": "^0.9.0",
+    "@zeit/next-css": "^1.0.1",
+    "normalize.css": "^8.0.1",
     "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
     "axios": "^0.19.0",
-    "mobx": "^5.14.2",
-    "mobx-devtools-mst": "^0.9.21",
-    "mobx-react-lite": "^1.5.0",
-    "mobx-state-tree": "^3.15.0",
     "next": "9.1.2",
+    "next-images": "^1.3.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "typescript": "^3.6.4",
     "use-async-effect": "^2.2.1"
   },
   "devDependencies": {
-    "@types/material-ui": "^0.21.6",
-    "@zeit/next-css": "^1.0.1",
-    "babel-plugin-import": "^1.12.2",
+    "bulma": "^0.8.0",
     "next-compose-plugins": "^2.2.0",
     "next-purgecss": "^3.1.1",
     "next-size": "^2.1.0",
