--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "normalize.css": "^8.0.1",
     "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
+    "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
-    "next": "9.1.2",
+    "next": "^9.2",
     "next-images": "^1.3.0",
+    "normalize.css": "^8.0.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "typescript": "^3.6.4",
