--- a/package.json
+++ b/package.json
@@ -10,21 +10,19 @@
   "dependencies": {
     "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
-    "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.0",
     "next": "^9.2",
     "next-images": "^1.3.0",
     "normalize.css": "^8.0.1",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "typescript": "^3.6.4",
-    "use-async-effect": "^2.2.1"
+    "use-async-effect": "^2.2.1",
+    "zustand": "^2.2.3"
   },
   "devDependencies": {
-    "bulma": "^0.8.0",
-    "next-compose-plugins": "^2.2.0",
-    "next-purgecss": "^3.1.1",
-    "next-size": "^2.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.4.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0"
   }
